# just-do-it

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .mcp.json  CHANGELOG.md  README.md  docker-compose.prod.yml  docker-compose.yml  google_tasks_export.json  manage.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  version-release.yml
compose/: Dockerfile  entrypoint.sh  start.sh
config/settings/: __init__.py  base.py  local.py  production.py  test.py
docs/: deployment.md
docs/superpowers/plans/: 2026-04-02-django-scaffold.md  2026-04-02-todo-app.md
docs/superpowers/specs/: 2026-04-02-django-scaffold-design.md  2026-04-02-todo-app-design.md
tasks/: admin.py  forms.py  models.py  recurrence.py  urls.py
tasks/management/commands/: generate_recurring_tasks.py  import_google_tasks.py
tasks/migrations/: 0001_initial.py  0002_task_is_detached_task_is_skipped_task_series_date_and_more.py
tasks/static/tasks/css/: style.css
tasks/static/tasks/js/: app.js
tasks/templates/tasks/: all_tasks.html  base.html  calendar.html  dashboard.html  today.html
tasks/templates/tasks/includes/: nav.html
tasks/templates/tasks/partials/: attachment_item.html  followup_form.html  link_form.html  link_item.html  recurrence_form_partial.html  recurrence_scope_modal.html  subtask_form.html  subtask_item.html  task_card.html  task_card_expanded.html  task_form.html  (+2 more)
tasks/templatetags/: task_tags.py
tasks/tests/: test_forms.py  test_import_google_tasks.py  test_models.py  test_recurrence.py  test_templatetags.py  test_views_all_tasks.py  test_views_attachments.py  test_views_calendar.py  test_views_dashboard.py  test_views_followup.py  test_views_links.py  test_views_recurrence.py  test_views_reorder.py  test_views_subtask.py  test_views_task_crud.py  test_views_task_list_crud.py  test_views_today.py
tasks/views/: __init__.py  all_tasks.py  attachments.py  calendar.py  dashboard.py  followup.py  links.py  recurrence.py  reorder.py  subtask.py  task_crud.py  task_list_crud.py  today.py
todo/: urls.py  wsgi.py
todo/management/commands/: configure_project.py
traefik/: generate-cert.sh  traefik.yml
